<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layoutMain"
    android:layout_height="match_parent">
    

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/c"
        android:textSize="20sp"
        android:id="@+id/btnC"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginTop="250dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/perrcentage"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="120dp"
        android:layout_marginTop="250dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/delete"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="220dp"
        android:layout_marginTop="250dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/divided"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="320dp"
        android:layout_marginTop="250dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/_7"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="350dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/_8"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="120dp"
        android:layout_marginTop="350dp"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/_9"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="220dp"
        android:layout_marginTop="350dp"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/multiply"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="320dp"
        android:layout_marginTop="350dp"
        />


    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/_4"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="450dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/_5"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="120dp"
        android:layout_marginTop="450dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/_6"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="220dp"
        android:layout_marginTop="450dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/minus"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="320dp"
        android:layout_marginTop="450dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/_1"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="550dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/_2"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="120dp"
        android:layout_marginTop="550dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/_3"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="220dp"
        android:layout_marginTop="550dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/plus"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="320dp"
        android:layout_marginTop="550dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/_00"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="650dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/_0"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="120dp"
        android:layout_marginTop="650dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/dot"
        android:textSize="20sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:layout_marginStart="220dp"
        android:layout_marginTop="650dp"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/equal"
        android:textSize="20sp"
        android:backgroundTint="@color/purple_700"
        android:textColor="@color/black"
        android:layout_marginStart="320dp"
        android:layout_marginTop="650dp"
        />


</RelativeLayout>